[package]
name = "smb3_cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
edition = "2021"
description = "SMBv3.1.1 CLI client"
license = "MIT"

[dependencies]
chrono = "^0.4"
clap = { version = "4", features = ["derive"] }
indicatif = { version = "^0.17", features = ["tokio"] }
smb3 = { version = "^0.1", path = "../smb3" }
smb3_client = { version = "^0.1", path = "../smb3_client" }
tokio = { version = "1.38", features = ["fs", "io-util", "net", "rt", "rt-multi-thread", "macros"] }
