[package]
name = "serde_smb_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "^0.20"
proc-macro2 = "^1"
syn = { version = "^2", features = ["full"] }
quote = "^1"
