[package]
name = "smb3"
version = "0.1.0"
edition = "2021"
description = "Protocol types for SMBv3"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "^2"
bitflags_serde_shim = "^0.2"
count-write = "^0.1"
rand = "^0.8"
serde = { version = "^1", features = ["derive"] }
modular-bitfield = "0.11.2"
serde_dis = "^0.1.3"
serde_smb = { version = "^0.1", path = "../serde_smb" }

[dev-dependencies]
pretty_assertions = "^1.4"
