[package]
name = "smb3_client"
version = "0.1.0"
edition = "2021"
description = "SMBv3.1.1 client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "^0.8"
byteorder = "^1.4"
cmac = "^0.7"
derive_more = "^0.99"
hmac = "^0.12"
rand = "^0.8"
sha2 = "^0.10"
serde = { version = "^1", features = ["derive"] }
serde_smb = { path = "../serde_smb", version = "^0.1" }
smb3 = { path = "../smb3", version = "^0.1" }
sspi-bobbobbio = { version = "0.10.1" }
